--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     
     <div id="overlay"> 
         <div id="text">
-            <div class="info flex items-center">
+            <div class="info flexItems">
                 <img src="" alt="" srcset="" class="info" id="img" style="margin-right: 12.5px;">
                 <div id="resp"><strong>Correct Answer!</strong></div>
             </div>
