--- a/index.html
+++ b/index.html
@@ -79,14 +79,19 @@
             What Surah Is This Verse From?
         </div>
 
-        <div style="margin-top: 10px;display: flex; justify-content: space-around; align-items: center;">
+        <div style="display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+                    /* position: absolute;
+                    width: 100%; */
+        ">
             <img src="images/left-quote 2.svg" alt="">
             <img src="images/left-quote 1.svg" alt="">
         </div>
     </header>
 
     <main>
-        <div class="verseStyle">
+        <div class="verseStyle" style="margin-top: 10px;">
             <div id="verse">
                 And when they are told, “Believe as others believe,” 
                 they reply, “Will we believe as the fools believe?” 
