--- a/index.html
+++ b/index.html
@@ -103,18 +103,17 @@
             <input type="text" id="inpField" placeholder="Surah Number" onkeypress="return /[0-9]/i.test(event.key)">
         </div>
         
-         <div id="choiceBoxes" class="choiceBoxess" style="padding-top: 10px;
-                                        display: flex;
-                                        flex-direction: column;
-                                        align-items: center;
-                                        gap: 8px;">
+         <div id="choiceBoxes" class="choiceBoxess" 
+                               style="margin-top: 30px;
+                                      display: flex;
+                                        ">
                 
                 <!-- <div id="choice">choice 2</div>
                 <div id="choice">choice 3</div>
                 <div id="choice">choice 4</div> -->
             </div>
 
-        <div id="ans-box">
+        <div id="ans-box" hidden>
             <button id="answer-btn">Submit Answer</button>
         </div>
     </div>
