--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                 <div id="choice">choice 4</div> -->
             </div>
 
-        <div id="ans-box" hidden>
+        <!--<div id="ans-box" hidden>
             <button id="answer-btn">Submit Answer</button>
-        </div>
+        </div>-->
     </div>
 
 
