--- a/indexAR.html
+++ b/indexAR.html
@@ -118,7 +118,7 @@
 
     </main>
     
-    <div id="overlay"> 
+    <div id="overlay" style="direction: rtl;"> 
         <div id="text">
             <div class="info flexItems">
                 <img src="" alt="" srcset="" class="info" id="img" style="margin-right: 12.5px;">
