Revert "Arabic now Works & favicon fixed"
This reverts commit b78970b29655f915472b6f8fc511a35315ca97ab.

--- a/indexAR.html
+++ b/indexAR.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="javascriptAr.js" defer></script>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="/images/favicon.svg" type="image/svg">
+  <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700" 
         rel="stylesheet"  type="text/css">
 
