font and style update

--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
           And when they are told, “Believe as others believe,” they reply, “Will
           we believe as the fools believe?” Indeed, it is they who are fools,
           but they do not know.
+          And when they are told, “Believe as others believe,” they reply, “Will
+          we believe as the fools believe?” Indeed, it is they who are fools,
+          but they do not know.
+          And when they are told, “Believe as others believe,” they reply, “Will
+          we believe as the fools believe?” Indeed, it is they who are fools,
+          but they do not know.
         </div>
 
         <div style="padding-top: 25px" hidden>
