--- a/indexAR.html
+++ b/indexAR.html
@@ -6,11 +6,7 @@
     <script src="javascriptAr.js" defer></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="/images/favicon.svg" type="image/svg" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Kufi Arabic    ">
 
     <title>مسابقة القرآن</title>
   </head>
@@ -127,7 +123,7 @@
 
     <main>
       <div class="verseStyle" style="margin-top: 10px">
-        <div id="verse"></div>
+        <div id="verse" style="font-family: 'Noto Kufi Arabic';"></div>
 
         <div style="padding-top: 25px" hidden>
           <input
