Arabic fonts & score update

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div id="resp"><strong>Correct Answer!</strong></div>
         </div>
         <div class="correctAns" id="respText"></div>
-        <div>
+        <div id="overlayDiv">
           <button onclick="off()" id="answer-btn">Continue</button>
         </div>
       </div>
